# StyleTTS2

./: __init__.py  pyproject.toml  setup.py
Configs/: config.yml  config_ft.yml  config_libritts.yml
StyleTTS2.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt  top_level.txt
